@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-1-6-1
+DATE: 11/25/2013
+STAFF: lec
+CHANGES: 
+TR11544/weekly/ALL_MolNotesNoMP.py : add more excluded J:'s
+
 TAG: qcreports_db-5-1-5-6
 DATE: 11/18/2013
 STAFF: lec
